--- a/css/styles.css
+++ b/css/styles.css
@@ -94,3 +94,15 @@ ul {
 .text-content {
   margin-bottom: 60px;
 }
+
+.content-wrap {
+  max-width: 441px;
+}
+
+.title-content2 {
+  margin-bottom: 23px;
+}
+
+.about-us-text {
+  margin-bottom: 35px;
+}
